add new examples